# bitmap_to_C_array

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
inc/: arrayGenerator.h  main.h  parser.h
src/: arrayGenerator.cpp  main.cpp  parser.cpp
test/: testFile.txt
